<resources>
    <string name="app_name">EECS 314 Reference Tool</string>

    <string name="increase_in_speed">Enter the factor of partial speedup, S </string>
    <string name="fraction_tobe_spedup">Enter the fraction of program to be sped up, P</string>
    <string name="button_send">Calculate</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Amdahl\'s Law without Parallelization</string>
    <string name="title_activity_MIPSRef">MIPS Reference</string>
    <string name="title_activity_display_message">Amdahl\'s Law</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_front_page">EECS 314 Reference Tool</string>
    <string name="amdahl_b">Amdahl\'s Law Calculator</string>
    <string name="mipsref_b">Interactive MIPS reference</string>
    <string name="javatoc_b">C to x86 and ARM converter</string>
    <string name="pipeline_b">Interactive Pipelining Demo</string>
    <string name="equal">=</string>
    <string name="overallspeedup">Overall speedup</string>
    <string name="overall_enter">Enter overall speedup</string>
    <string name="one">1</string>
    <string name="line">----------------------</string>
    <string name="fraction">(1-P) + (P/S) </string>
    <string name="missing">Select value to be calculated</string>

    <string-array name="values_array">
        <item>partial speedup</item>
        <item>percent of program sped up</item>
        <item>overall speedup</item>
    </string-array>
    <string name="title_activity_cto_mips">C to x86 Assembly or ARM</string>
    <string name="title_activity_mips_ref">Interactive MIPS Reference</string>
    <string name="pick_value">Pick value to calculate below: </string>
    <string name="with_para">With Parallelization</string>
    <string name="wo_para">Without Parallelization</string>
    <string name="title_activity_parallelized_amdahls">Amdahl\'s Law with Parallelization</string>
    <string name="sn">S(N)</string>
    <string name="fractionp">(1-P) + (P/N) </string>
    <string name="increase_in_speed_p">Enter factor of parallelization, N</string>
    <string name="fraction_tobe_spedup_p">Enter the fraction to be parallelized, P</string>
    <string-array name="values_array_P">
        <item>amount of parallelization, N</item>
        <item>percent of program parallelized, P</item>
        <item>overall speedup, S(N)</item>
    </string-array>
    <string name="title_activity_pipelining">Interactive Pipelining</string>
    <string name="title_activity_arm">ARMActivity</string>
    <string name="gotoarm_b">C to ARM Compiler</string>

</resources>
