<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin">


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fraction_tobe_spedup_p"
                android:id="@+id/textView1P"
                android:textSize="14sp"
                android:layout_gravity="bottom|left" />

            <EditText android:id="@+id/fraction"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_gravity="left" />

        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/increase_in_speed_p"
                android:id="@+id/textView7P"
                android:textSize="14sp"
                android:singleLine="true" />

            <EditText android:id="@+id/increase"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/overall_enter"
                android:id="@+id/textView8"
                android:textSize="14sp" />

            <EditText android:id="@+id/overall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pick_value"
            android:id="@+id/textView9" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:prompt="@string/missing"
            android:contentDescription="Pick value to calculate"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:onClick="sendMessageP"
            android:layout_gravity="bottom|top" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/one"
            android:id="@+id/textView4P"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="0dp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sn"
                android:id="@+id/textView2P" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/equal"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/line"
                android:id="@+id/textView3"
                android:layout_marginLeft="30dp" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fractionp"
                android:id="@+id/textView5P"
                android:layout_marginLeft="90dp" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:textSize="12pt"
            android:layout_marginTop="3pt"
            android:id="@+id/tvResultP"
            android:gravity="center_horizontal">
        </TextView>

    </TableRow>


</TableLayout>